--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/15103df24c.js" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="dist/purify.min.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgxdSFu-Wtu463Z5loPGEFd62NFB1hSyg"></script>
+  <style>
+    body {
+    background-image: url("https://images.unsplash.com/photo-1531685250784-7569952593d2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzR8fHdoaXRlJTIwcmVzdGF1cmFudHxlbnwwfDB8MHx8&auto=format&fit=crop&w=500&q=60");
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    backdrop-filter: blur(7px);
+  }
+  </style>
 </head>
 <body>
+  <div class="bg-image"></div>
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  
 </body>
 </html>
