--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/15103df24c.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="dist/purify.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgxdSFu-Wtu463Z5loPGEFd62NFB1hSyg"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgxdSFu-Wtu463Z5loPGEFd62NFB1hSyg&callback=Function.prototype"></script>
   <style>
     body {
     background-image: url("https://images.unsplash.com/photo-1531685250784-7569952593d2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzR8fHdoaXRlJTIwcmVzdGF1cmFudHxlbnwwfDB8MHx8&auto=format&fit=crop&w=500&q=60");
